# wlwz_webui

./: .pre-commit-config.yaml  DISCLAIMER.md  LICENSE  README.md  skills-lock.json
.github/actions/backend-quality/: action.yml
.github/workflows/: backend-quality.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  Makefile  README.md  alembic.ini  config.py  db.py  logging_config.py  main.py  pyproject.toml  requirements.txt  skills-lock.json
backend/alembic/: env.py
backend/alembic/versions/: 4b3fe02560cf_init.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/middleware/: __init__.py  http_access.py
backend/app/api/routers/: __init__.py  auth.py  chat.py  conversation.py  roles.py  tts.py
backend/app/api/schemas/: __init__.py  auth.py  chat.py  conversation.py  roles.py  tts.py
backend/app/common/: __init__.py  prompt.py  request_context.py
backend/app/core/: __init__.py  logging.py  settings.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  entities.py
backend/app/infra/: __init__.py  model_client.py  tts_cache.py
backend/app/services/: __init__.py  chat_service.py  conversation_service.py  roles_service.py  tts_service.py
backend/config/: roles.yaml
backend/middleware/: __init__.py  http_access.py
backend/models/: db_models.py
backend/routers/: auth_router.py  chat_router.py  conversation_router.py  roles_router.py  tts_router.py
backend/services/: chat_service.py  conversation_service.py  models.py  roles_service.py  tts_service.py
backend/tests/: conftest.py
backend/tests/api/: test_auth_conversation_chat.py
backend/tests/services/: test_chat_service.py  test_conversation_service.py
backend/utils/: log_redact.py  model_client.py  prompt.py  request_context.py  security.py  tts_cache.py
frontend/: .gitignore  README.md  package-lock.json  package.json  skills-lock.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Chat.js  Header.js  RoleSelector.js  RolesConfig.js  Sidebar.js
frontend/src/components/styles/: ChatStyles.js  RoleSelectorStyles.js
frontend/src/contexts/: ThemeContext.js
frontend/src/pages/: ChatPage.jsx  RolesPage.jsx  SettingsPage.jsx
frontend/src/services/: api.js
