[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "argon2-cffi>=23.1.0",
    "asyncpg==0.29.0",
    "email-validator==2.1.1",
    "fastapi==0.103.1",
    "pydantic==2.7.0",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.0.0",
    "python-jose==3.3.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0",
    "redis==5.0.1",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]==2.0.23",
    "sse-starlette==1.6.5",
    "structlog>=24.4.0",
    "uvicorn==0.23.2",
]
